# candela

./: .gcloudignore  .gitignore  .goreleaser.yaml  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile.ci  Dockerfile.proxy  Dockerfile.sidecar  README.md  buf.gen.yaml  candela.db  cloudbuild.yaml  config.example.yaml  config.yaml  firebase.example.json  flake.nix  go.mod  go.sum  lefthook.yml  users.json
.github/workflows/: build-ci-images.yml  ci.yml  deploy.yml  dev-container.yml  proxy-release.yml  release.yml  sidecar.yml
cmd/backfill-budget-config/: main.go
cmd/candela/: auth.go  auth_test.go  auth_token_test.go  config_api_test.go  config_writer.go  config_writer_test.go  lm_handler.go  lm_handler_test.go  local_api.go  local_api_test.go  main.go  main_test.go  rewrite_test.go  runtime_handler.go  runtime_handler_test.go  span_capture.go  state_test.go  traces_handler.go
cmd/candela-local/: leaderboard_handler.go  lm_handler.go  lm_handler_test.go  local_api.go  local_api_test.go  main.go  main_test.go  runtime_handler.go  runtime_handler_test.go  span_capture.go  span_capture_test.go  state.go  state_test.go  traces_handler.go  ui_integration_test.go
cmd/candela-server/: main.go  processor.go  processor_test.go
cmd/candela-sidecar/: integration_test.go  main.go  pubsub.go  pubsub_test.go  sidecar_integration_test.go
cmd/candela-worker/: main.go
cmd/migrate-schema/: main.go
collector/: builder.yaml  collector-config.yaml
deploy/: Dockerfile.server  Dockerfile.worker  candela.production.yaml  config.production.example.yaml  config.production.yaml  docker-compose.yml  entrypoint.sh
docs/: adk-integration.md  api-reference.md  architecture.md  budgets.md  candela-local.md  candela.md  cost-calculation.md  deployment.md  development.md  env-vars.md  multitenancy.md  nix-setup.md  operations.md  otel-collector.md  proxy.md  security.md  testing.md  user-management.md
docs/adk/: candela_adk.py
examples/adk-agent/: agent.py  launch.sh  requirements.txt
pkg/attribution/: attribution.go
pkg/auth/: admin.go  admin_test.go  context.go  context_test.go  firebase.go  firebase_test.go  iap.go  iap_test.go
pkg/cloudauth/: aws.go  aws_test.go  gcp.go  gcp_test.go  provider.go  registry.go  registry_test.go
pkg/connecthandlers/: attribution.go  convert.go  crit_handler_test.go  dashboard_handler.go  dashboard_handler_test.go  errors.go  export_test.go  helpers_test.go  ingestion_handler.go  integration_test.go  pointer_fields_test.go  project_handler.go  project_handler_test.go  scope.go  security_test.go  trace_handler.go  trace_handler_test.go  user_handler.go  user_handler_test.go  usercache.go  usercache_test.go
pkg/costcalc/: cache_test.go  calculator.go  calculator_extra_test.go  calculator_fuzz_test.go  calculator_security_test.go  calculator_test.go
pkg/hubbleaudit/: types.go  types_test.go
pkg/ingestion/: queue.go
pkg/notify/: notifier.go  notifier_race_test.go  notifier_security_test.go  notifier_test.go
pkg/processor/: circuit_breaker.go  circuit_breaker_test.go  processor.go  processor_isolation_test.go  processor_test.go  resilient_writer.go  resilient_writer_test.go  sink_health.go
pkg/prototest/: integration_test.go  roundtrip_test.go  validate_test.go
pkg/proxy/: anthropic_direct_test.go  bedrock.go  bedrock_integration_test.go  bedrock_test.go  billing_test.go  budget_gate_test.go  cache_ttl_test.go  caching_test.go  circuit_breaker.go  circuit_breaker_test.go  compat_test.go  cors_test.go  coverage_boost_test.go  functional_ttl_test.go  gemini_test.go  hardening_v5_integration_test.go  hardening_v5_test.go  ids.go  ids_test.go  parsers.go  parsers_fuzz_test.go  parsers_test.go  proxy.go  proxy_error_test.go  proxy_integration_test.go  proxy_security_test.go  proxy_test.go  sigv4.go  sigv4_test.go  sni_map_test.go  tenant_test.go  testing_helpers.go  translate.go  translate_security_test.go  translate_test.go
pkg/runtime/: README.md  discovery.go  discovery_test.go  helpers.go  helpers_test.go  manager.go  manager_test.go  registry.go  runtime.go  runtime_test.go
pkg/session/: session.go  session_fingerprint_test.go  session_test.go
pkg/storage/: store.go  store_test.go
pkg/tetragonaudit/: grpc_source.go  grpc_source_test.go  multi_sink.go  multi_sink_test.go  normalize_test.go  otel_sink.go  otel_sink_extra_test.go  otel_sink_test.go  pipeline.go  pipeline_extra_test.go  pipeline_test.go
pkg/transparent/: listener.go  sni.go  (+4 more)
proto/: bq_field.proto  bq_table.proto  buf.gen.yaml  buf.yaml
rust/: Cargo.toml  README.md  buf.gen.yaml  flake.nix
rust/bins/candela-proxy/: Cargo.toml
rust/bins/candela-proxy/src/: main.rs
rust/bins/candela-sidecar/: Cargo.toml
rust/bins/candela-sidecar/src/: main.rs
rust/crates/candela-core/: Cargo.toml
rust/crates/candela-core/src/: lib.rs  proto.rs
rust/crates/candela-processor/: Cargo.toml
rust/crates/candela-processor/src/: cost.rs  lib.rs
rust/crates/candela-processor/tests/: processor_integration.rs
rust/crates/candela-proxy/: Cargo.toml
rust/crates/candela-proxy/src/: attribution.rs  circuit.rs  handler.rs  ids.rs  lib.rs  parsers.rs  translate.rs
rust/crates/candela-proxy/tests/: handler_integration.rs
rust/crates/candela-storage/: Cargo.toml
rust/crates/candela-storage/src/: lib.rs  otlp.rs  pubsub.rs
rust/crates/candela-transparent/: Cargo.toml
rust/crates/candela-transparent/src/: lib.rs  listener.rs  origdst.rs  sni.rs
scratch/: create_rust_rewrite_issues.sh  pr_comment.md  query_duckdb.go  setup_branch_protection.sh
sdks/python/: pyproject.toml
sdks/python/candela/: __init__.py  sdk.py
sdks/python/tests/: test_sdk.py
sdks/rust/: Cargo.toml
sdks/rust/src/: lib.rs
terraform/: .gitignore  README.md  artifact_registry.tf  bigquery.tf  cloud_run.tf  firebase.tf  firestore.tf  github_wif.tf  iam.tf  main.tf  outputs.tf  terraform.tfvars.example  tfplan  variables.tf
ui/: .env.example  .env.test  .gitignore  README.md  next.config.ts  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  test_output.txt
(+164 files in other folders)
