[package]
name = "candela-sdk"
version = "0.1.0"
edition = "2021"
description = "Lightweight enrichment SDK for Candela AI observability"
license = "Apache-2.0"
repository = "https://github.com/candelahq/candela"

[dependencies]
http = { version = "1.0", optional = true }

[features]
default = ["http"]
http = ["dep:http"]

[dev-dependencies]
