[package]
name = "candela-processor"
description = "Batched span processor and cost calculator for the Candela pipeline"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
candela-core = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tokio-test = { workspace = true }
