[package]
name = "candela-storage"
description = "Storage backend implementations (Pub/Sub, OTLP) for Candela span export"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
candela-core = { workspace = true }
anyhow = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
# google-cloud-pubsub = { workspace = true }  # TODO: Enable after initial compile check

[dev-dependencies]
tokio-test = { workspace = true }
